# PQC-Vault-Messenger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/cli/: main.cpp
src/core/: aes_gcm.cpp  aes_gcm.hpp  dilithium.cpp  dilithium.hpp  kyber.cpp  kyber.hpp
src/messenger/: client.cpp  client.hpp  handshake.cpp  handshake.hpp  server.cpp  server.hpp
src/vault/: pqc_format.cpp  pqc_format.hpp  vault.cpp  vault.hpp
